<resources>
    <string name="app_name">Daily Timer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_buffer_enabled">Enable Buffer</string>
    <string name="pref_title_speaking_time">Speaking Time (Seconds)</string>
    <string name="pref_title_transition_buffer_time">Buffer Time (Seconds)</string>
    <string name="pref_title_people_amount">Team Size</string>

    <string name="pref_title_transition_buffers">Buffer Type</string>
    <string-array name="pref_transition_buffers_titles">
        <item>Team Buffer</item>
        <item>Individual Buffer</item>
    </string-array>
    <string-array name="pref_transition_buffers_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Alarm</string>

    <string name="pref_title_new_message_notifications">Play Alarm</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="positive_default_timer">0:00</string>
    <string name="negative_default_timer">-0:00</string>
    <string name="title_activity_update_team">UpdateTeamActivity</string>
</resources>
