<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="should_play_ringtone"
        android:title="@string/pref_title_new_message_notifications"/>

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="should_play_ringtone"
        android:key="ringtone_sound"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone"/>

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="should_play_ringtone"
        android:key="should_vibrate_on_ringtone"
        android:title="@string/pref_title_vibrate"/>

    <PreferenceCategory
        android:title="Reminder" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="should_notify"
            android:title="Should notify"/>

        <giorag.dailytimer.TimePickerDialog
            android:defaultValue="08:00"
            android:key="time_of_reminder"
            android:dependency="should_notify"
            android:showDefault="true"
            android:summary="Set time in day to send a daily reminder"
            android:title="Reminder" />

        <MultiSelectListPreference
            android:dialogTitle="Days to send remainder"
            android:key="reminder_days"
            android:dependency="should_notify"
            android:summary="Pick which days in the week to send a daily reminder"
            android:title="Days to send remainder"
            android:entries="@array/weekday_names"
            android:entryValues="@array/weekday_values"
            android:defaultValue="@array/default_weekdays"
            />
    </PreferenceCategory>

</PreferenceScreen>
